Nav alignment, fixes #50.

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -6,10 +6,10 @@
   h1 {
     padding-top: 0.3em;
     line-height: 1.1em;
-    margin-bottom: 0em;
+    margin-bottom: 0;
 
-    @media (max-width: 768px){
-      margin-bottom: .5em;
+    @media (max-width: 768px) {
+      margin-bottom: 0.5em;
     }
   }
 
@@ -19,7 +19,6 @@
     letter-spacing: 0.08em;
     padding-top: 40px;
   }
-
 
   // NAV default styles
 
@@ -40,9 +39,10 @@
     width: 100%;
     padding-top: 20px;
     padding-bottom: 17px;
-    border-bottom: 1px solid #e8e8e8;
+    border-bottom: 1px solid #E8E8E8;
+
     @media (max-width: 545px) {
-      padding-bottom: 0px;
+      padding-bottom: 0;
     }
   }
 
@@ -59,12 +59,12 @@
     width: 100%;
     display: block;
     text-align: center;
-    margin: 60px auto 20px auto;
+    margin: 60px auto 20px;
   }
 
   .sticky nav ul {
     max-width: 900px;
-    margin: 0px auto;
+    margin: 0 auto;
   }
 
   nav ul li.main-nav {
@@ -80,11 +80,11 @@
   }
 
   nav ul li.nodrop {
-    padding: 6px 10px 6px 10px;
+    padding: 6px 10px;
   }
 
   nav ul li.drop {
-    padding: 6px 10px 4px 10px;
+    padding: 6px 10px 4px;
   }
 
   nav ul li span {
@@ -96,6 +96,7 @@
     -webkit-transform: rotateZ(90deg);
     -moz-transform: rotateZ(90deg);
     transform: rotateZ(90deg);
+    vertical-align: bottom;
   }
 
   nav ul li:last-child {
@@ -115,18 +116,18 @@
     font-size: 0.95em;
     letter-spacing: 0.05em;
     padding: 8px 10px;
-    margin: 0px;
+    margin: 0;
   }
 
   nav ul li.main-nav ul.nav-dropdown {
     position: absolute;
     z-index: 2;
     left: 0;
-    background-color: #f5f5f5;
-    border: 1px solid #666;
-    border-radius: 0px 0px 6px 6px;
-    border-top: 0px;
-    margin: 5px 0px;
+    background-color: #F5F5F5;
+    border: 1px solid #666666;
+    border-radius: 0 0 6px 6px;
+    border-top: 0;
+    margin: 5px 0;
     visibility: hidden;
     opacity: 0;
     filter: alpha(opacity=0);
@@ -147,7 +148,7 @@
   nav select option {
     text-transform: uppercase;
     font-weight: bold;
-    padding: 5px 0px 5px 0px;
+    padding: 5px 0;
   }
 
   nav select option.sub {
@@ -172,20 +173,22 @@
   // NAV hover states
 
   nav ul li:hover {
-    color: #666;
-    border: 1px solid #666;
+    color: #666666;
+    border: 1px solid #666666;
     border-radius: 6px;
     cursor: pointer;
-    background-color: #eee;
+    background-color: #EEEEEE;
   }
 
-  nav ul a:hover li, nav ul li:hover a, nav ul li a:hover{
-    color: #666;
+  nav ul a:hover li,
+  nav ul li:hover a,
+  nav ul li a:hover {
+    color: #666666;
   }
 
-  nav ul a:hover li{
-    background-color: #eee;
-    border: 1px solid #666;
+  nav ul a:hover li {
+    background-color: #EEEEEE;
+    border: 1px solid #666666;
     border-radius: 6px;
   }
 
